practice/12.8/task2/service-task2.yaml
apiVersion: v1
kind: Service
metadata:
  name: netology-svc
  namespace: default
spec:
  selector:
    app: task2
  ports:
    - name: for-nginx
      port: 8001
      targetPort: 80
