practice/12.8/task2/ingress-task2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: t2-ingress
  namespace: default
spec:
  rules:
  - host: netology.local
    https:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netology-svc
            port:
              number: 8001
  tls:
  - hosts:
      - netology.local
    secretName: secret-tls
